# GScript.GSuite

./: README.md  anieditor.js  changelog.json  example-theme.css  index.html  package-lock.json  package.json  pnpm-lock.yaml  server.js
.github/workflows/: build.yml  ci.yml
css/: global.css
images/: particleemu-image-index.json
js/: anieditor.js  beautifytool.js  build-web.js  bump-version.js  gmonaco.js  leveleditor.js  levelgeneditor.js  particleapng.js  particleemu.js  particleengine.js  particleexport.js  setshape2editor.js  tabmanager.js
levels/: index.json  onlinestartlocal.nw
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
